major bug fixes

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <h2>Enter a target number to see binary vs linear search<br></h2>
 
         <form>
-            <input type="text" id="target"></input><br><br>
+            <input type="number" id="target"></input><br><br>
             <button type="button" onclick="binarySearchCall()">Calculate</button>
             <button type="button" onclick="Clear()">Clear</button><br>
             <div id='answer'><br>Answer:</div>
