fixed html description,title

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="styles.css">
+
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico" />
+    <meta name="description"
+        content="This is a binary vs. linear search visualizer" />
+        <title>Binary Search visualizer</title>
+</head>
 
 <body>
     <div class="center">
